--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <i class="fab fa-telegram"></i>
         </div>
         <h1>Privadinho da Brenda</h1>
-        <p>Você está sendo redirecionado para o Telegram. Aguarde um momento...</p>
+        <p>Se você não conseguir 👉🏻 Clique nos 3 pontinhos e abra no navegador.</p>
         
         <div class="progress-container">
             <div class="progress-bar" id="progressBar"></div>
